# Cockatrice

./: CMakeLists.txt  README.md  conanfile.txt  format.sh  vcpkg.json
.ci/: compile.sh  gha_cache_usage.py  gha_cache_usage.sh  thin_macos_qtlib.sh
.ci/Arch/: Dockerfile
.ci/Debian11/: Dockerfile
.ci/Debian12/: Dockerfile
.ci/Fedora41/: Dockerfile
.ci/Fedora42/: Dockerfile
.ci/Ubuntu20.04/: Dockerfile
.ci/Ubuntu22.04/: Dockerfile
.ci/Ubuntu24.04/: Dockerfile
.github/workflows/: cache-report.yml  desktop-build.yml  docker-release.yml
cmake/: SignMacApplications.cmake  cl-sccache.cmd.in
cmake/triplets/: x64-osx-13.cmake
cockatrice/: CMakeLists.txt
cockatrice/src/: main.cpp
cockatrice/src/filters/: deck_filter_string.cpp
cockatrice/src/game/player/: player.cpp  player_logic.cpp
cockatrice/src/game_graphics/tally/: subtype_tally.cpp
cockatrice/src/game_graphics/zones/: stack_zone.cpp
cockatrice/src/interface/: theme_manager.cpp
cockatrice/src/interface/layouts/: flow_layout.cpp
cockatrice/src/interface/widgets/cards/: card_info_picture_with_text_overlay_widget.cpp
cockatrice/src/interface/widgets/deck_analytics/: resizable_panel.cpp
cockatrice/src/interface/widgets/deck_analytics/analyzer_modules/mana_curve/: mana_curve_config_dialog.cpp  mana_curve_config_dialog.h
cockatrice/src/interface/widgets/deck_editor/: deck_state_manager.cpp
cockatrice/src/interface/widgets/general/: home_styled_button.cpp  home_widget.cpp
cockatrice/src/interface/widgets/general/display/charts/bars/: segmented_bar_widget.cpp
cockatrice/src/interface/widgets/printing_selector/: printing_selector_card_sorting_widget.cpp
cockatrice/src/interface/widgets/tabs/api/archidekt/: tab_archidekt.cpp
cockatrice/src/interface/widgets/utility/: painting_utils.cpp  painting_utils.h
cockatrice/src/interface/widgets/visual_database_display/: visual_database_display_color_filter_widget.cpp
cockatrice/src/interface/widgets/visual_deck_storage/deck_preview/: deck_preview_tag_addition_widget.cpp  deck_preview_tag_dialog.cpp  deck_preview_tag_display_widget.cpp
cockatrice/translations/: cockatrice_cs.ts  cockatrice_de.ts  cockatrice_el.ts  cockatrice_en_US.ts  cockatrice_es.ts  cockatrice_fi.ts  cockatrice_fr.ts  cockatrice_it.ts  cockatrice_ja.ts  cockatrice_ko.ts  cockatrice_nl.ts  cockatrice_pl.ts  cockatrice_pt.ts  cockatrice_pt_BR.ts  cockatrice_ru.ts  cockatrice_sv.ts  cockatrice_yue.ts  cockatrice_zh-Hans.ts  cockatrice_zh-Hant.ts
dbconverter/: CMakeLists.txt
libcockatrice_card/: CMakeLists.txt
libcockatrice_card/libcockatrice/card/: card_info.cpp
libcockatrice_card/libcockatrice/card/database/parser/: cockatrice_xml_4.cpp
libcockatrice_deck_list/: CMakeLists.txt
libcockatrice_filters/: CMakeLists.txt
libcockatrice_interfaces/: CMakeLists.txt
libcockatrice_models/libcockatrice/models/database/: CMakeLists.txt
libcockatrice_models/libcockatrice/models/deck_list/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/client/abstract/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/client/local/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/client/remote/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/server/local/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/server/remote/: CMakeLists.txt
libcockatrice_network/libcockatrice/network/server/remote/game/: server_game.cpp
libcockatrice_rng/: CMakeLists.txt
libcockatrice_settings/: CMakeLists.txt
libcockatrice_utility/libcockatrice/utility/: color.h  expression.cpp
oracle/: CMakeLists.txt
oracle/translations/: oracle_de.ts  oracle_el.ts  oracle_en_US.ts  oracle_es.ts  oracle_et.ts  oracle_fi.ts  oracle_fr.ts  oracle_it.ts  oracle_ja.ts  oracle_ko.ts  oracle_nb.ts  oracle_nl.ts  oracle_pl.ts  oracle_pt.ts  oracle_pt_BR.ts  oracle_ru.ts  oracle_sr.ts  oracle_tr.ts  oracle_yue.ts  oracle_zh-Hans.ts
servatrice/: CMakeLists.txt
