set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(HEADERS local_client.h)

set(SOURCES local_client.cpp)

add_library(libcockatrice_network_client_local STATIC ${HEADERS} ${SOURCES})

add_dependencies(libcockatrice_network_client_local libcockatrice_network_client_abstract)

target_include_directories(libcockatrice_network_client_local PUBLIC .)

target_link_libraries(
  libcockatrice_network_client_local
  PUBLIC ${COCKATRICE_QT_VERSION_NAME}::Network ${COCKATRICE_QT_VERSION_NAME}::WebSockets
         libcockatrice_network_client_abstract
)
