set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(HEADERS remote_client.h)

set(SOURCES remote_client.cpp)

add_library(libcockatrice_network_client_remote STATIC ${HEADERS} ${SOURCES})

add_dependencies(libcockatrice_network_client_remote libcockatrice_network_client_abstract libcockatrice_protocol)

target_include_directories(libcockatrice_network_client_remote PUBLIC .)

target_link_libraries(
  libcockatrice_network_client_remote
  PUBLIC ${COCKATRICE_QT_VERSION_NAME}::Network ${COCKATRICE_QT_VERSION_NAME}::WebSockets
         libcockatrice_network_client_abstract libcockatrice_interfaces libcockatrice_utility libcockatrice_protocol
)
